# jumping_monopedal

./: .gitignore  README.md  frames_2025-11-10_14.50.34.gv  frames_2025-11-24_13.21.34.gv  frames_2025-12-02_02.04.44.gv  lqr.ipynb  readme.md
bag_files/bag_1763741109/: metadata.yaml
bag_files/bag_1763963644/: bag_1763963644_0.db3  metadata.yaml
bag_files/bag_1763963689/: metadata.yaml
bag_files/bag_1763964362/: metadata.yaml
bag_files/bag_1763965277/: metadata.yaml
bag_files/bag_1763966416/: metadata.yaml
bag_files/bag_1764586790/: bag_1764586790_0.db3
bag_files/bag_1765036110/: metadata.yaml
bag_files/bag_1765036448/: metadata.yaml
bag_files/bag_1765041962/: bag_1765041962_0.db3  metadata.yaml
bag_files/bag_1765042026/: metadata.yaml
bag_files/bag_1765042121/: bag_1765042121_0.db3  metadata.yaml
bag_files/bag_1765042160/: metadata.yaml
bag_files/bag_1765042216/: bag_1765042216_0.db3  metadata.yaml
matlab/: hop_2D_sim.slx  hop_2d.mlx  twoD.m  twoD_ground.slx
src/monoped_2d_description/: CMakeLists.txt  package.xml
src/monoped_2d_description/config/: controller_full.yaml  gz_bridge.yaml
src/monoped_2d_description/launch/: rsp.launch.py  sim.launch.py  sim_no_controller.launch.py
src/monoped_2d_description/rviz/: config.rviz
src/monoped_2d_description/scripts/: dummy_script.py
src/monoped_2d_description/src/: cpp_node.cpp
src/monoped_2d_description/urdf/: gazebo_full.xacro  inertial_macros.xacro  robot_core.xacro  robot_material.xacro  robot_params.xacro
src/monoped_2d_description/worlds/: empty.world
(+46 files in other folders)
